--- a/docker/linea-sepolia/docker-compose.yml
+++ b/docker/linea-sepolia/docker-compose.yml
@@ -62,7 +62,7 @@ services:
   besu-node:
     hostname: linea-besu
     container_name: linea-besu
-    image: hyperledger/besu:25.6.0
+    image: hyperledger/besu:25.8.0 #25.8 +
     platform: linux/amd64
     healthcheck:
       test: ["CMD-SHELL", "bash -c '[ -f /tmp/pid ]'"]
@@ -115,7 +115,7 @@ services:
       - ./maru-config.toml:/opt/consensys/maru/configs/maru-config.toml:ro
       - ./maru-genesis.json:/opt/consensys/maru/configs/maru-genesis.json:ro
       - ../config/linea-besu-sequencer/log4j.xml:/opt/consensys/maru/configs/log4j.xml:ro
-      - linea-sepolia-maru:/data
+      - linea-sepolia-maru:/opt/maru
     command:
       - "java"
       - "-Dlog4j2.configurationFile=/opt/consensys/maru/configs/log4j.xml"
