--- a/docker/linea-sepolia/docker-compose.yml
+++ b/docker/linea-sepolia/docker-compose.yml
@@ -62,7 +62,7 @@ services:
   besu-node:
     hostname: linea-besu
     container_name: linea-besu
-    image: hyperledger/besu:25.8.0 #25.8 +
+    image: consensys/linea-besu-package:${LINEA_BESU_TAG:-latest}
     platform: linux/amd64
     healthcheck:
       test: ["CMD-SHELL", "bash -c '[ -f /tmp/pid ]'"]
@@ -78,7 +78,7 @@ services:
       - "30303:30303"      # P2P TCP
       - "30303:30303/udp"  # P2P UDP
     environment:
-      - JAVA_OPTS=-Xmx4g
+      - JAVA_OPTS=-Xmx2g
       - LOG4J_CONFIGURATION_FILE=/var/lib/besu/log4j.xml
     command:
       - --config-file=/var/lib/besu/linea-besu.config.toml
@@ -99,7 +99,6 @@ services:
     hostname: linea-maru
     container_name: linea-maru
     image: consensys/maru:013d64f
-    platform: linux/amd64
     restart: unless-stopped
     depends_on:
       - besu-node
@@ -114,11 +113,9 @@ services:
     volumes:
       - ./maru-config.toml:/opt/consensys/maru/configs/maru-config.toml:ro
       - ./maru-genesis.json:/opt/consensys/maru/configs/maru-genesis.json:ro
-      - ../config/linea-besu-sequencer/log4j.xml:/opt/consensys/maru/configs/log4j.xml:ro
       - linea-sepolia-maru:/opt/maru
     command:
       - "java"
-      - "-Dlog4j2.configurationFile=/opt/consensys/maru/configs/log4j.xml"
       - "-jar"
       - "/opt/consensys/maru/maru.jar"
       - "--maru-genesis-file"
