--- a/docker/linea-sepolia/docker-compose.yml
+++ b/docker/linea-sepolia/docker-compose.yml
@@ -111,11 +111,13 @@ services:
     environment:
       - JAVA_OPTS=-Xmx2g
     volumes:
-      - ./maru-config.toml:/opt/consensys/maru/configs/maru-config.toml:ro
-      - ./maru-genesis.json:/opt/consensys/maru/configs/maru-genesis.json:ro
-      - linea-sepolia-maru:/opt/maru
+      - ./maru/config/maru-config.toml:/opt/consensys/maru/configs/maru-config.toml:ro
+      - ./maru/config/maru-genesis.json:/opt/consensys/maru/configs/maru-genesis.json:ro
+      - ./maru/config/log4j.xml:/opt/consensys/maru/configs/log4j.xml:ro
+      - linea-sepolia-maru:/data
     command:
       - "java"
+      - "-Dlog4j2.configurationFile=/opt/consensys/maru/configs/log4j.xml"
       - "-jar"
       - "/opt/consensys/maru/maru.jar"
       - "--maru-genesis-file"
